--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.6",
     "lucide": "^0.539.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
