--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/swiper": "^5.4.3",
     "clsx": "^2.1.1",
     "html-react-parser": "^5.2.6",
     "lucide": "^0.539.0",
@@ -21,6 +22,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
