--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/swiper": "^5.4.3",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "html-react-parser": "^5.2.6",
     "lucide": "^0.539.0",
     "lucide-react": "^0.539.0",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "swiper": "^11.2.10",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
