--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/swiper": "^5.4.3",
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "html-react-parser": "^5.2.6",
+    "html-truncate": "^1.2.2",
     "lucide": "^0.539.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
