--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1"
@@ -36,6 +38,7 @@
     "@types/node": "^20.19.11",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
