--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "framer-motion": "^12.23.12",
     "html-react-parser": "^5.2.6",
     "html-truncate": "^1.2.2",
+    "i18next": "^25.6.0",
     "lucide": "^0.539.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.4.6",
+    "next-i18next": "^15.4.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-i18next": "^16.0.1",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.31.0",
